--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ development: &default
   adapter: postgresql
   database: connect_development
   encoding: utf8
-  host: db
+  host: localhost
   min_messages: warning
   pool: 10
   port: 5432
