Add proper configuration to use docker-compose

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ development: &default
   adapter: postgresql
   database: connect_development
   encoding: utf8
-  host: localhost
+  host: db
   min_messages: warning
   pool: 10
   port: 5432
